--- a/index.html
+++ b/index.html
@@ -228,12 +228,11 @@
 						<h3>Página web</h3>
 						<p>Desarrollo de una página web para servicios de mantenimiento a equipos de cómputo</p>
 					</div>
-					<div class="gallery-single spi-hr fix hover">
+					<div class="gallery-single spi-hr fix ">
 						<img src="./images/proyectos/pag-web.jpg" class="img-fluid" alt="Image">
 						<div class="text-hover">
 							<a href="https://github.com/Rams-dev/jose-antonio.github.io" target="_blank"><h3><i class="fa fa-github"></i> GitHub</h3></a>
 						</div>
-						
 					</div>
 				</div>
 
@@ -242,7 +241,7 @@
 						<h3>Buscador de imagenes</h3>
 						<p>Desarrollo de una aplicación para buscar imganes en pixabay</p>
 					</div>
-					<div class="gallery-single spi-hr fix hover">
+					<div class="gallery-single spi-hr fix ">
 						<img src="./images/proyectos/buscador-imagenes.jpg" class="img-fluid" alt="Image">
 						<div class="text-hover">
 							<a href="https://github.com/Rams-dev/buscador-de-imagenes" target="_blank"><h3><i class="fa fa-github"></i> GitHub</h3></a>
