--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154615282-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-154615282-1');
+	</script>
+
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 	
 	<script src="https://use.fontawesome.com/a95c03cc29.js"></script>
